--- a/frontend/locales/es.yml
+++ b/frontend/locales/es.yml
@@ -1,8 +1,12 @@
+'CSE 185 Technical Demo:': Demostración técnica de CSE 185
+Upload to S3: Subir a S3
 button:
+  GetVideos: Obtener videos
   about: Acerca de
   back: Atrás
   go: Ir
   home: Inicio
+  play: juego
   toggle_dark: Alternar modo oscuro
   toggle_langs: Cambiar idiomas
   upload: subir
